Primeira rota da API - T

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-venv/
+.venv/
 # src/data/raw # O correto é ignorar esta pasta para o envio dos dados originais. Aqui enviei para fins de estudo.
 .DS_Store
 teste-python-pleno.pdf
+__pycache__
